API Key almacenada desde una configuración y suministrada al momento de la compilación del proyecto

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,13 @@ android {
         }
     }
 
+    def localProperties = new Properties()
+    localProperties.load(new FileInputStream(rootProject.file("keystore.properties")))
+
     buildTypes {
+        debug {
+            buildConfigField("String", "API_KEY", "\"" + localProperties['MOVIEDB_API_KEY'] + "\"")
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
