--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
-MOVIEDB_API_KEY="e335fe059e587e36f864b571278534ed"
+MOVIEDB_API_KEY=e335fe059e587e36f864b571278534ed
 storePassword=myStorePassword
 keyPassword=e335fe059e587e36f864b571278534ed
 keyAlias=myKeyAlias
