--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,12 +57,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget=17
     }
 
     composeOptions {
@@ -92,21 +92,21 @@ dependencies {
     androidTestImplementation composeBom
 
     // CORE
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.collection:collection-ktx:1.2.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.navigation:navigation-runtime:2.5.3'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.activity:activity-ktx:1.7.0-alpha04'
 
     // ROOM
-    implementation "androidx.room:room-runtime:2.5.0"
-    annotationProcessor "androidx.room:room-compiler:2.5.0"
+    implementation "androidx.room:room-runtime:2.5.1"
+    annotationProcessor "androidx.room:room-compiler:2.5.1"
 
-    implementation 'androidx.room:room-ktx:2.5.0'
-    implementation 'androidx.room:room-runtime:2.5.0'
-    kapt 'androidx.room:room-compiler:2.5.0'
+    implementation 'androidx.room:room-ktx:2.5.1'
+    implementation 'androidx.room:room-runtime:2.5.1'
+    kapt 'androidx.room:room-compiler:2.5.1'
 
     // DATASTORE: Reemplazo de SharedPreferences
     implementation 'androidx.datastore:datastore-core:1.0.0'
@@ -119,24 +119,24 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10'
 
     // COMPOSE CON MATERIAL DESIGN
-    implementation 'androidx.compose.material:material:1.4.1'
+    implementation 'androidx.compose.material:material:1.4.2'
     implementation 'androidx.compose.material3:material3:1.0.1'
-    implementation 'androidx.compose.material:material-icons-core:1.3.1'
-    implementation 'androidx.compose.material:material-icons-extended:1.3.1'
+    implementation 'androidx.compose.material:material-icons-core:1.4.2'
+    implementation 'androidx.compose.material:material-icons-extended:1.4.2'
     implementation 'androidx.compose.material3:material3-window-size-class:1.0.1'
 
     // COMPOSE CON NAVEGACION
     implementation 'androidx.navigation:navigation-compose:2.5.3'
 
     // COMPOSE EN VIEWMODEL
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
 
     // COMPOSE PREVIEW
     implementation 'androidx.compose.ui:ui-tooling-preview'
     debugImplementation 'androidx.compose.ui:ui-tooling'
 
     // UTILIDADES PARA VIEWMODELS
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
 
     // TESTING
     testImplementation 'junit:junit:4.13.2'
@@ -153,7 +153,7 @@ dependencies {
 
     // SERVICIOS DE GOOGLE
     implementation 'com.google.gms:google-services:4.3.15'
-    implementation 'com.google.firebase:firebase-analytics-ktx:21.2.1'
+    implementation 'com.google.firebase:firebase-analytics-ktx:21.2.2'
 
     // RETROFIT
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
