--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,9 @@ buildscript {
         //classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //    classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:3.1.1'
         classpath 'com.google.gms:google-services:4.3.15'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.4'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
         classpath 'com.google.firebase:perf-plugin:1.4.2'
-        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.18"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
 
 //        implementation project(":ksp")
@@ -22,8 +22,8 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '7.4.0' apply false
-    id 'com.android.library' version '7.4.0' apply false
+    id 'com.android.application' version '8.0.0' apply false
+    id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'com.google.devtools.ksp' version '1.8.0-1.0.8'
 //    id 'org.jetbrains.kotlin.jvm' version '1.8.0'
