--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,18 +13,18 @@ def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
 
 // Loads the keystore.properties file into the keystoreProperties object.
-keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+keystoreProperties.load( new FileInputStream(keystorePropertiesFile) )
 
 android {
     namespace 'com.jgt.wizelinebaz2023'
     compileSdk 33
-
+    // compileSdkVersion "android-UpsideDownCake" // Usar con Android 14
 
     defaultConfig {
         applicationId "com.jgt.wizelinebaz2023"
         minSdk 29
         targetSdk 33
-        
+        // targetSdkVersion "android-UpsideDownCake" // Usar con Android 14
         versionCode 1
         versionName "1.0"
 
@@ -37,12 +37,11 @@ android {
             keyPassword keystoreProperties['keyPassword']
             storeFile file(keystoreProperties['storeFile'])
             storePassword keystoreProperties['storePassword']
-            //movie_db_api_key keystoreProperties['MOVIEDB_API_KEY']
         }
     }
 
     def localProperties = new Properties()
-    localProperties.load(new FileInputStream(rootProject.file("keystore.properties")))
+    localProperties.load( new FileInputStream(rootProject.file("keystore.properties")) )
 
     buildTypes {
         debug {
@@ -54,35 +53,25 @@ android {
         }
     }
 
-    buildFeatures {
-        compose true
-    }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
 
-    kotlinOptions {
-        jvmTarget=17
-    }
+    buildFeatures { compose true }
 
-    composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.0"
-    }
+    kotlinOptions { jvmTarget = 17 }
+
+    composeOptions { kotlinCompilerExtensionVersion = "1.4.0" }
 }
 
 protobuf {
-    protoc {
-        artifact = "com.google.protobuf:protoc:3.10.0"
-    }
+    protoc { artifact = "com.google.protobuf:protoc:3.10.0" }
 
     generateProtoTasks {
         all().each { task ->
             task.builtins {
-                java {
-                    option 'lite'
-                }
+                java { option 'lite' }
             }
         }
     }
@@ -100,15 +89,16 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.navigation:navigation-runtime:2.5.3'
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.activity:activity-ktx:1.7.0'
+    implementation 'androidx.activity:activity-ktx:1.7.0' // Actualizar hasta que salga Android 14
 
     // ROOM
-    implementation "androidx.room:room-runtime:2.5.1"
-    annotationProcessor "androidx.room:room-compiler:2.5.1"
+    def room_version = '2.5.1'
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 
-    implementation 'androidx.room:room-ktx:2.5.1'
-    implementation 'androidx.room:room-runtime:2.5.1'
-    kapt 'androidx.room:room-compiler:2.5.1'
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // DATASTORE: Reemplazo de SharedPreferences
     implementation 'androidx.datastore:datastore-core:1.0.0'
@@ -167,5 +157,5 @@ dependencies {
     testImplementation('com.squareup.okhttp3:mockwebserver:4.10.0')
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
-    implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
+    implementation 'com.github.bumptech.glide:compose:1.0.0-alpha.1'
 }
