--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,22 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext {
-        kotlin_version = '1.8.0'
-    }
+    ext { kotlin_version = '1.8.10' }
+
+    repositories { mavenCentral() }
+
     dependencies {
-        //classpath 'com.android.tools.build:gradle:7.3.1'
-        //classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-//    classpath 'com.amazonaws:aws-android-sdk-appsync-gradle-plugin:3.1.1'
         classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
         classpath 'com.google.firebase:perf-plugin:1.4.2'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
-
-//        implementation project(":ksp")
-//        ksp project(":ksp")
-    }
-    repositories {
-        mavenCentral()
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 plugins {
-    id 'com.android.application' version '8.0.0' apply false
-    id 'com.android.library' version '8.0.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-    id 'com.google.devtools.ksp' version '1.8.0-1.0.8'
-//    id 'org.jetbrains.kotlin.jvm' version '1.8.0'
+    id 'com.android.application'      version '8.0.0'           apply false
+    id 'com.android.library'          version '8.0.0'           apply false
+    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
+    id 'com.google.devtools.ksp'      version '1.8.10-1.0.9'
 }
 
 subprojects {
