--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
-    ext { kotlin_version = '1.8.10' }
+    ext {
+        kotlin_version = '1.8.10'
+        agp_version    = '8.0.0'
+    }
 
     repositories { mavenCentral() }
 
@@ -9,14 +12,16 @@ buildscript {
         classpath 'com.google.firebase:perf-plugin:1.4.2'
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.23.0-RC1'
     }
 }
 
 plugins {
-    id 'com.android.application'      version '8.0.0'           apply false
-    id 'com.android.library'          version '8.0.0'           apply false
+    id 'com.android.application'      version "$agp_version" apply false
+    id 'com.android.library'          version "$agp_version" apply false
     id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
     id 'com.google.devtools.ksp'      version '1.8.10-1.0.9'
+    id 'io.gitlab.arturbosch.detekt'  version '1.23.0-RC1'
 }
 
 subprojects {
