--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,12 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application'      version "$agp_version" apply false
-    id 'com.android.library'          version "$agp_version" apply false
-    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
-    id 'com.google.devtools.ksp'      version '1.8.10-1.0.9'
-    id 'io.gitlab.arturbosch.detekt'  version '1.23.0-RC1'
+    id 'com.android.application'        version "$agp_version"    apply false
+    id 'com.android.library'            version "$agp_version"    apply false
+    id 'org.jetbrains.kotlin.android'   version "$kotlin_version" apply false
+    id 'com.google.dagger.hilt.android' version '2.44'            apply false
+    id 'com.google.devtools.ksp'        version '1.8.10-1.0.9'
+    id 'io.gitlab.arturbosch.detekt'    version '1.23.0-RC1'
 }
 
 subprojects {
