--- a/app/build.gradle
+++ b/app/build.gradle
@@ -156,6 +156,8 @@ dependencies {
 
     // TESTING
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'io.mockk:mockk:1.12.2'
+    testImplementation 'app.cash.turbine:turbine:0.12.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
