--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.23.0-RC1'
+        classpath "org.jacoco:org.jacoco.core:0.8.10"
     }
 }
 
@@ -23,6 +24,7 @@ plugins {
     id 'com.google.dagger.hilt.android' version '2.44'            apply false
     id 'com.google.devtools.ksp'        version '1.8.10-1.0.9'
     id 'io.gitlab.arturbosch.detekt'    version '1.23.0-RC1'
+    id 'jacoco'
 }
 
 subprojects {
@@ -34,4 +36,9 @@ subprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+jacoco {
+    toolVersion = "0.8.8"
+    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
 }
